--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -3,7 +3,38 @@
 	<meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
 	<meta charset="UTF-8">
 
-	<title> {{ page.title }} | {{ site.title }} </title>
+	<link
+		rel="icon"
+		type="image/png"
+		href="favicon-96x96.png"
+		sizes="96x96"
+	>
 
-	
+	<link
+		rel="stylesheet"
+		href="{{ "/assets/css/style.css"   }}"
+	/>
+
+	<link
+		href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined"
+		rel="stylesheet"
+	/>
+
+	{% seo %}
+
+	<meta name="keywords" content="{{page.keywords}}">
+
+	<link rel="manifest" href="{{  "/site.webmanifest" | relative_url }}">
 </head>
+<body>
+	{% include navbar.html %}
+
+	{% include topbar.html %}
+
+	<main>
+		{{ content }}
+	</main>
+
+	{% include footer.html %}
+
+</body>
