--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -6,6 +6,9 @@
 	{% seo %}
 	<meta name="keywords" content="{{ site.keywords }}">
 
+	<link rel="shortcut icon" href="{{ "/favicon.ico" | relative_url }}" type="image/x-icon">
+	<link rel="icon" type="image/png" href="{{ "/assets/images/favicon-96x96.png" | relative_url }}">
+
 	<!-- CSS -->
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
