additional seo config

--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -21,7 +21,7 @@
 		<section class="hero">
 			<div class="left">
 				<h1>
-					<span class="subtitle">Solusi Kreaftif untuk</span>
+					<span class="subtitle">Solusi Kreatif untuk</span>
 					<span class="title">Bisnes & Jenama Anda</span>
 				</h1>
 				<p class="description">
