--- a/_sass/index.scss
+++ b/_sass/index.scss
@@ -110,12 +110,14 @@ nav {
   position: relative;
   display: grid;
   width: 100%;
-  height: 890px;
+  height: 100vh;
+  max-height: 890px;
   background-color: $blue-600;
   grid-template-columns: 1fr 1fr;
   padding-top: 96px;
   overflow: hidden;
   margin-bottom: 120px;
+  
 
   &::before {
     position: absolute;
@@ -166,10 +168,13 @@ nav {
       
 
       .primary-button {
-        display: block;
+        display: flex;
+        align-items: center;
+        justify-content: center;
         width: 100%;
-        padding: 24px;
-        font-size: 20px;
+        padding: 20px;
+        font-size: 16px;
+        font-weight: 600;
         color: white;
         border-radius: 6px;
         background-color: $blue-700;
@@ -179,8 +184,9 @@ nav {
       .secondary-button {
         display: block;
         width: 100%;
-        padding: 24px;
-        font-size: 20px;
+        padding: 20px;
+        font-size: 16px;
+        font-weight: 600;
         color: $yellow-300;
         border: 2px solid $yellow-500;
         border-radius: 6px;
@@ -288,7 +294,7 @@ nav {
       }
 
       .service-description {
-        font-size: 20px;
+        font-size: 16px;
         color: $slate-600;
         margin-bottom: 136px;
       }
@@ -376,7 +382,7 @@ nav {
     text-align: center;
 
     .cta-title {
-      font-size: 48px;
+      font-size: 36px;
       font-weight: 600;
       color: $yellow-300;
       margin-bottom: 20px;
@@ -398,19 +404,22 @@ nav {
       .book-now {
         display: block;
         width: 100%;
-        padding: 24px;
-        font-size: 20px;
+        padding: 20px;
+        font-size: 16px;
+        font-weight: 600;
         color: white;
         border-radius: 6px;
         background-color: $blue-700;
         text-align: center;
+
       }
 
       .contact-us {
         display: block;
         width: 100%;
-        padding: 24px;
-        font-size: 20px;
+        padding: 20px;
+        font-size: 16px;
+        font-weight: 600;
         color: $yellow-300;
         border: 2px solid $yellow-500;
         border-radius: 6px;
