--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -3,6 +3,10 @@
 		<img src="{{ "/assets/images/logo-masbastudio.png" | relative_url }}" alt="{{ site.title }} Logo" class="logo">
 		<span class="title">{{ site.title }}</span>
 	</a>
+	<button class="menu-toggler">
+		<img class="show" src="{{ "/assets/images/burger.svg" }}" alt="Menu Icon">
+		<img class="hide" src="{{ "/assets/images/times.svg" }}" alt="Menu Icon">
+	</button>
 	<ul class="navlinks">
 		{% for nav in site.data.navigation %}
 			<li>
