--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -15,7 +15,7 @@
 	<link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="{{ "/assets/css/main.css" | relative_url }}">
 </head>
-<body>
+<body class="">
 	{% include navbar.html %}
 	<main>
 		<section class="hero">
@@ -41,7 +41,7 @@
 					</div>
 			</div>
 		</section>
-
+{% comment %} 
 		<section class="why-us">
 			<div class="why">
 				<img src="{{ "/assets/images/light-bulb.svg" }}" alt="Light Bulb Icon">
@@ -118,9 +118,12 @@
 				</div>
 			</div>
 		</section>
+		{% endcomment %}
 	</main>
 	<footer>
 		<p>&copy 2025 Masba Studio. Hak Cipta Terpelihara.</p>
-	</footer>
+	</footer> 
+
+	<script src="{{ "/assets/js/script.js" }}"></script>
 </body>
 </html>
