--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -25,7 +25,7 @@
 					<span class="title">Bisnes & Jenama Anda</span>
 				</h1>
 				<p class="description">
-					Membantu individu, pelajar, dan SME membina jenama melalui perkhidmatan percetakan berkualiti dan pemasaran digital kreatif seperti design grafik, video editing dan pembangunan website.
+					Membantu individu, pelajar, dan  lore membina jenama melalui perkhidmatan percetakan berkualiti dan pemasaran digital kreatif seperti design grafik, video editing dan pembangunan website.
 				</p>
 
 				<div class="cta">
