--- a/_sass/index.scss
+++ b/_sass/index.scss
@@ -113,23 +113,13 @@ nav {
     background-color: $blue-600;
 
       a {
-      display: block;
-      padding: 16px 20px;
-      font-size: 20px;
-      font-weight: 600;
+        display: block;
+        padding: 16px 20px;
+        font-size: 20px;
+        font-weight: 600;
+        text-align: center;
     }
   }
-
-  // .navlinks {
-  //   display: flex;
-  //   justify-content: end;
-  //   gap: 45px;
-
-  //   a {
-  //     font-size: 20px;
-  //     font-weight: 600;
-  //   }
-  // }
 }
 
 body.show-menu {
@@ -179,10 +169,9 @@ body.show-menu {
 
   .left {
     height: 100%;
-    padding: 0 60px;
-    overflow: hidden;
+    padding: 0 20px;
     z-index: 10;
-    padding-top: 120px;
+    padding-top: 60px;
 
     h1 {
       display: flex;
@@ -210,14 +199,16 @@ body.show-menu {
 
     .cta {
       display: flex;
-      gap: 30px;
-      
+      justify-content: center;
+      flex-wrap: wrap;
+      gap: 15px 30px;
 
       .primary-button {
         display: flex;
         align-items: center;
         justify-content: center;
-        width: 100%;
+        width: 300px;
+        max-width: 100%;
         padding: 20px;
         font-size: 16px;
         font-weight: 600;
@@ -229,7 +220,7 @@ body.show-menu {
 
       .secondary-button {
         display: block;
-        width: 100%;
+        width: 300px;
         padding: 20px;
         font-size: 16px;
         font-weight: 600;
@@ -497,6 +488,7 @@ footer {
     .navlinks {
       position: static;
       display: flex;
+      align-items: center;
       justify-content: end;
       width: auto;
       height: auto;
