--- a/_sass/index.scss
+++ b/_sass/index.scss
@@ -274,6 +274,7 @@ body.show-menu {
   align-items: center;
   justify-content: center;
   padding: 0 30px;
+  flex-wrap: wrap;
   gap: 30px;
   margin-bottom: 120px;
 
