--- a/_sass/index.scss
+++ b/_sass/index.scss
@@ -314,43 +314,51 @@ body.show-menu {
 
   .service {
     display: flex;
-    padding: 0 96px;
-    gap: 40px;
-    margin-bottom: 40px;
+    flex-direction: column-reverse;
+    padding: 0 20px;
+    gap: 20px;
+    margin-bottom: 96px;
 
-    &:nth-child(even) {
-      flex-direction: row-reverse;
-    }
+    // &:nth-child(even) {
+    //   flex-direction: row-reverse;
+    // }
 
     .service-detail {
-      padding-top: 25px;
+      // padding-top: 25px;
 
       .service-title {
         display: block;
-        font-size: 36px;
+        font-size: 28px;
         color: $blue-800;
         margin-bottom: 30px;
+        text-align: center;
       }
 
       .service-description {
         font-size: 16px;
         color: $slate-600;
-        margin-bottom: 136px;
+        margin-bottom: 60px;
       }
 
       .service-cta {
+        display: block;
+        max-width: 100%;
         padding: 18px 70px;
         font-size: 16px;
         font-weight: 600;
         color: white;
         border-radius: 6px;
+        text-align: center;
         background-color: $blue-500;
       }
     }
 
     img {
       width: 536px;
-      height: 474px;
+
+      // height: 474px;
+      margin: 0 auto;
+      object-fit: scale-down;
     }
   }
 }
@@ -478,7 +486,7 @@ footer {
   background-color: $blue-800;
 }
 
-@media screen and (min-width: $sm) {
+@media screen and (width >= $sm) {
   nav {
     padding: 0 30px;
 
