fix home page responsiveness

--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -20,17 +20,19 @@
 	<main>
 		<section class="hero">
 			<div class="left">
-				<h1>
-					<span class="subtitle">Solusi Kreatif untuk</span>
-					<span class="title">Bisnes & Jenama Anda</span>
-				</h1>
-				<p class="description">
-					Membantu individu, pelajar, dan  lore membina jenama melalui perkhidmatan percetakan berkualiti dan pemasaran digital kreatif seperti design grafik, video editing dan pembangunan website.
-				</p>
+				<div class="details">
+					<h1>
+						<span class="subtitle">Solusi Kreatif untuk</span>
+						<span class="title">Bisnes & Jenama Anda</span>
+					</h1>
+					<p class="description">
+						Membantu individu, pelajar, dan  lore membina jenama melalui perkhidmatan percetakan berkualiti dan pemasaran digital kreatif seperti design grafik, video editing dan pembangunan website.
+					</p>
 
-				<div class="cta">
-					<a href="{{ "/catalogs.html" | relative_url }}" class="primary-button">Lihat Katalog</a>
-					<a href="{{ "/about-us.html" | relative_url }}" class="secondary-button">Hubungi Kami</a>
+					<div class="cta">
+						<a href="{{ "/catalogs.html" | relative_url }}" class="primary-button">Lihat Katalog</a>
+						<a href="{{ "/about-us.html" | relative_url }}" class="secondary-button">Hubungi Kami</a>
+					</div>
 				</div>
 			</div>
 			<div class="right">
