--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -1,24 +1,9 @@
-<!DOCTYPE html>
-<html lang="ms">
-<head>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	{% seo %}
-	<meta name="keywords" content="{{ site.keywords }}">
+---
+layout: base
+---
 
-	<link rel="shortcut icon" href="{{ "/favicon.ico" | relative_url }}" type="image/x-icon">
-	<link rel="icon" type="image/png" href="{{ "/assets/images/favicon-96x96.png" | relative_url }}">
 
-	<!-- CSS -->
-	<link rel="preconnect" href="https://fonts.googleapis.com">
-	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-	<link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600&display=swap" rel="stylesheet">
-	<link rel="stylesheet" href="{{ "/assets/css/main.css" | relative_url }}">
-</head>
-<body class="">
-	{% include navbar.html %}
-	<main>
-		<section class="hero">
+<section class="hero">
 			<div class="left">
 				<div class="details">
 					<h1>
@@ -119,11 +104,3 @@
 				</div>
 			</div>
 		</section>
-	</main>
-	<footer>
-		<p>&copy 2025 Masba Studio. Hak Cipta Terpelihara.</p>
-	</footer> 
-
-	<script src="{{ "/assets/js/script.js" }}"></script>
-</body>
-</html>
