--- a/_sass/index.scss
+++ b/_sass/index.scss
@@ -159,6 +159,7 @@ section {
     .section-title {
       font-size: 28px;
       color: $blue-800;
+      margin-bottom: 30px;
     }
 
     .section-subtitle {
@@ -572,6 +573,10 @@ footer {
     }
   }
 
+  section {
+    padding: 0 30px;
+  }
+
   .hero {
     .left {
       padding-top: 160px;
@@ -584,6 +589,14 @@ footer {
 }
 
 @media screen and (width >= $md) {
+  section {
+    .section-head {
+      .section-title {
+        font-size: 36px;
+      }
+    }
+  }
+
  .hero {
     .left {
       width: 600px;
